# ptz_geometric_control

./: README.md
pan_tilt_bringup/: CMakeLists.txt  package.xml
pan_tilt_bringup/config/: 56-pan-tilt.rules
pan_tilt_bringup/launch/: panTilt_bringup.launch  panTilt_view.launch  reproduce.launch
pan_tilt_description/: CMakeLists.txt  package.xml
pan_tilt_description/pcd/: meiclab2_light.pcd
pan_tilt_description/rviz/: camera_view.rviz  camera_zoom_cloud_marker.rviz  point_cloud.rviz  replay_config.rviz
pan_tilt_description/scripts/: auto.py  auto_funcional.py  flow.py  foto.py  guardar_referencia.py  iou.py  optical.py  real.py  resaltar_punto.py  simple_ptz_controller.py
pan_tilt_description/urdf/: pan_tilt.urdf  pan_tilt_full.urdf.xacro
pan_tilt_driver/: CMakeLists.txt  package.xml
pan_tilt_driver/nodes/: pan_tilt_control.py
pan_tilt_msgs/: CMakeLists.txt  package.xml
video_stream/: CMakeLists.txt  package.xml
video_stream/scripts/: video_stream_node.py  zoom_calibrator.py  zoom_controller.py
video_stream/srv/: SetZoomLevel.srv
