<?xml version="1.0"?>
<package format="2">
  <name>pan_tilt_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configuration for pan-tilt system</description>

  <maintainer email="lei.yan@iquotient-robotics.com">QuartzYan</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
